--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h2>Hero Section</h2>
+    <h2>Simple Contact form</h2>
+    <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname">
+        <label for="email">Email</label><br>
+        <input type="text" id="email" name="email"><br>
+        <label for="message">Message</label><br>
+        <input type="text" id="message" name="message">
+    </form>
 </body>
 </html>
