Added testimonial section

--- a/index.html
+++ b/index.html
@@ -19,5 +19,20 @@
         <label for="message">Message</label><br>
         <input type="text" id="message" name="message">
     </form>
+    <h2>Testimonials</h2>
+    <div class="test">
+        <div class="speech-bubble">
+            <p>
+                This is the best.<br>
+                <strong>I highly recommend!</strong>
+            </p>
+        </div>
+        <div class="user">
+            <div class="useInfo">
+                <h4>Learner</h4>
+                <p>Web Developer</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
