Added exclamation to testimonials

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <label for="message">Message:</label><br>
         <input type="text" id="message" name="message">
     </form>
-    <h2>Testimonials</h2>
+    <h2>Testimonials!</h2>
     <div class="test">
         <div class="speech-bubble">
             <p>
