--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <label for="email">Email:</label><br>
         <input type="text" id="email" name="email"><br>
         <label for="message">Message:</label><br>
-        <input type="text" id="message" name="message">
+        <input type="text" id="message" name="message"><br>
+        <input type="button" name="button">
     </form>
     <h2>Testimonials!</h2>
     <div class="test">
